--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/backend/server.js",
     "dev": "nodemon src/backend/server.js",
-    "build": "cd src/frontend && npm run build"
+    "build": "cd src/frontend && npm run build",
+    "preinstall": "cd src/frontend && npm install"
   },
   "keywords": [],
   "author": "",
