--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "license": "ISC",
   "dependencies": {
     "@netlify/functions": "^2.8.1",
+    "@notionhq/client": "^2.2.15",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "nodemon": "^3.1.5"
   }
 }
