--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,17 @@
 [build]
-  base = "."
   command = "npm run build"
   publish = "src/frontend/build"
   functions = "src/backend"
 
+[build.environment]
+  NODE_VERSION = "14"
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
+  status = 200
+
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
   status = 200
